@@ -12,8 +12,10 @@ lbdb (0.18.6) unstable; urgency=low
   * Add --enable-lbdb-dotlock to configure options to force using of
     lbdb_dotlock (instead of using mutt_dotlock) and use this option for
     the Debian package (Closes: #58188).
+  * Update FSF address in copyrights.
+  * Update dotlock code from mutt 1.1.12.
 
- -- Roland Rosenfeld <roland@debian.org>  Sun, 30 Apr 2000 15:58:55 +0200
+ -- Roland Rosenfeld <roland@debian.org>  Mon,  1 May 2000 11:40:12 +0200
 
 lbdb (0.18.5) unstable; urgency=low
 
